# BookstoreApp

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  requirements.txt
bookstore/: settings.py  urls.py  views.py
order/: admin.py
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
