[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore api"
authors = ["Thiago batista"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.1"
factory-boy = "^3.3.3"
django = "^5.2.3"
django-rest-framework = "^0.1.0"
django-extensions = "^4.1"
django-debug-toolbar = "^5.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
